# hidop

./: AUTHORS.txt  CMakeLists.txt  README.md
csd/: hidprint.csd
src/: hid.c  hidapi.h
src/opcodes/: hidops.cpp
src/tests/: devlist.cpp  joystick.cpp  trackpad.cpp
